--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,11 @@
     "php": ">=5.6.4",
     "laravel/framework": "5.4.*"
   },
+  "autoload": {
+    "psr-4": {
+      "Maxlab\\": "src/"
+    }
+  },
   "minimum-stability": "dev",
   "prefer-stable": true
 }
